# bgsc

./: .gitignore  CMakeLists.txt  README.md  bgsc.hpp  blur_test.py  main.cpp  psnr_ssim.cpp  psnr_ssim.hpp
jsvm_test/: .gitignore  jsvm_test.sh  layer0.cfg  layer1.cfg  main.cfg  single.cfg  single_layer.cfg
scripts/: compress.sh  compress_by_bitrate.sh  plot_bg.sh  plot_blur.sh  plot_master.py  psnr_graph.py  psnr_roi.sh  psnr_roi_graph.py  test.sh  test_suite.sh  union_images.sh  x264_process.py
src/: bgsc.cpp  bgsc.hpp  psnr_ssim.cpp  psnr_ssim.hpp
